--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/platform-express": "^10.0.0",
+    "@types/multer-gridfs-storage": "^4.0.5",
+    "mongo-gridfs": "github:khoapmd/mongo-gridfs",
     "mongoose": "^7.4.2",
+    "multer-gridfs-storage": "^5.0.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
