--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/platform-express": "^10.0.0",
     "@types/multer-gridfs-storage": "^4.0.5",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "mongo-gridfs": "github:khoapmd/mongo-gridfs",
     "mongoose": "^7.4.2",
     "multer-gridfs-storage": "^5.0.2",
