--- a/server/.env.local
+++ b/server/.env.local
@@ -1,1 +1,5 @@
 MONGODB_URI='mongodb://127.0.0.1:27017/local-drive'
+MAIL_SERVICE='GMAIL'
+Mail_USER='peerzadahanannaseer@gmail.com'
+MAIL_PORT=465
+MAIL_PASSWORD='whvyesxqchyjgcbe'
