--- a/server/package.json
+++ b/server/package.json
@@ -30,13 +30,13 @@
     "@types/multer-gridfs-storage": "^4.0.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
-    "ejs": "^3.1.9",
+    "handlebars": "^4.7.8",
     "mongo-gridfs": "github:khoapmd/mongo-gridfs",
     "mongoose": "^7.4.2",
     "multer-gridfs-storage": "^5.0.2",
-    "nodemailer": "^6.9.4",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "save": "^2.9.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
