add vercel settings

--- a/server/.env.production
+++ b/server/.env.production
@@ -1,5 +1,8 @@
-MONGODB_URI='mongodb://127.0.0.1:27017/prod-drive'
+MONGODB_URI=mongodb+srv://peerzadahanannaseer:FSKnueO63bi7ONs3@drivecloud.zivw3uz.mongodb.net/?retryWrites=true&w=majority 
 MAIL_SERVICE='GMAIL'
 Mail_USER='peerzadahanannaseer@gmail.com'
 MAIL_PORT=465
 MAIL_PASSWORD='whvyesxqchyjgcbe'
+ATLASPASSWORD='FSKnueO63bi7ONs3'
+
+x
