--- a/server/vercel.json
+++ b/server/vercel.json
@@ -6,17 +6,11 @@
             "use":"@vercel/node"
         }
     ],
-    "routes":[
+    "routes": [
         {
-            "src":"/(.*)",
-            "dest":"/",
-            "methods":[
-                "GET",
-                "POST",
-                "PUT",
-                "DELETE",
-                "PATCH"
-            ]
+            "src": "/(.*)",
+            "dest": "src/main.ts",
+            "methods": ["GET", "POST", "PUT", "PATCH", "DELETE"]
         }
     ]
 }
