--- a/client/angular.json
+++ b/client/angular.json
@@ -35,7 +35,9 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+              "sweetalert2.all.min.js"
+             
             ]
           },
           "configurations": {
