--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.0.0",
+    "@angular/animations": "^15.2.9",
     "@angular/cdk": "^15.2.9",
     "@angular/common": "^15.0.0",
     "@angular/compiler": "^15.0.0",
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "bootstrap": "^5.3.1",
+    "ngx-toastr": "^16.2.0",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.7.27",
     "tslib": "^2.3.0",
