--- a/server/package.json
+++ b/server/package.json
@@ -24,14 +24,20 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.1.1",
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/serve-static": "^4.0.0",
+    "@types/bcrypt": "^5.0.0",
+    "@types/connect-redis": "^0.0.21",
     "@types/multer-gridfs-storage": "^4.0.5",
+    "@types/redis": "^4.0.11",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "connect-redis": "^7.1.0",
     "express-session": "^1.17.3",
     "handlebars": "^4.7.8",
     "mongo-gridfs": "github:khoapmd/mongo-gridfs",
@@ -40,6 +46,7 @@
     "nest-winston": "^1.9.4",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "redis": "^4.6.10",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "save": "^2.9.0",
